syntax = "proto3";

package yandex.cloud.lockbox.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/lockbox/v1;lockbox";
option java_package = "yandex.cloud.api.lockbox.v1";

// A secret that may contain several versions of the payload.
message Secret {
  enum Status {
    STATUS_UNSPECIFIED = 0;

    // The secret is being created.
    CREATING = 1;

    // The secret is active and the secret payload can be accessed.
    //
    // Can be set to INACTIVE using the [SecretService.Deactivate] method.
    ACTIVE = 2;

    // The secret is inactive and unusable.
    //
    // Can be set to ACTIVE using the [SecretService.Deactivate] method.
    INACTIVE = 3;
  }

  // ID of the secret.
  string id = 1;

  // ID of the folder that the secret belongs to.
  string folder_id = 2;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 3;

  // Name of the secret.
  string name = 4;

  // Description of the secret.
  string description = 5;

  // Custom labels for the secret as `key:value` pairs. Maximum 64 per key.
  map<string, string> labels = 6;

  // Optional ID of the KMS key will be used to encrypt and decrypt the secret.
  string kms_key_id = 7;

  // Status of the secret.
  Status status = 8;

  // Current (i.e. the `latest`) version of the secret.
  Version current_version = 9;

  // Flag that inhibits deletion of the secret.
  bool deletion_protection = 10;
}

message Version {
  enum Status {
    STATUS_UNSPECIFIED = 0;

    // The version is active and the secret payload can be accessed.
    ACTIVE = 1;

    // The version is scheduled for destruction, the time when it will be destroyed
    // is specified in the [Version.destroy_at] field.
    SCHEDULED_FOR_DESTRUCTION = 2;

    // The version is destroyed and cannot be recovered.
    DESTROYED = 3;
  }

  // ID of the version.
  string id = 1;

  // ID of the secret that the version belongs to.
  string secret_id = 2;

  // Time when the version was created.
  google.protobuf.Timestamp created_at = 3;

  // Time when the version is going to be destroyed. Empty unless the status
  // is `SCHEDULED_FOR_DESTRUCTION`.
  google.protobuf.Timestamp destroy_at = 4;

  // Description of the version.
  string description = 5;

  // Status of the secret.
  Status status = 6;

  // Keys of the entries contained in the version payload.
  repeated string payload_entry_keys = 7;
}
